<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AboutUs"
    style="@style/AppTheme"
    android:background="?attr/background">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aboutus"
        android:textSize="30dp"
        android:textStyle="bold"
        android:textColor="?attr/aboutusheading"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        tools:layout_editor_absoluteX="154dp"
        tools:layout_editor_absoluteY="16dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aboutustext"
        android:layout_margin="10dp"
        android:textSize="15dp"
        android:textColor="?attr/textcolor"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/creator"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:textSize="20dp"
        android:textColor="?attr/aboutussubheading"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/creator_name"
        android:layout_margin="5dp"
        android:textColor="?attr/textcolor"
        android:layout_gravity="end"
        android:textAlignment="viewEnd"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="?attr/aboutussubheading"
        android:text="@string/Mentor"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:textSize="20dp"

        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Mentor_name"
        android:textColor="?attr/textcolor"
        android:layout_margin="5dp"
        android:layout_gravity="end"
        android:textAlignment="textEnd"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/creator_name"
        android:layout_margin="5dp"
        android:textColor="?attr/textcolor"
        android:layout_gravity="end"
        android:textAlignment="viewEnd"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contri"
        android:layout_marginTop="10dp"
        android:textColor="?attr/aboutussubheading"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:textSize="20dp"

        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/amartya"
        android:layout_margin="5dp"
        android:layout_gravity="end"
        android:textColor="?attr/textcolor"
        android:textAlignment="textEnd"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aomenath"
        android:layout_margin="5dp"
        android:layout_gravity="end"
        android:textColor="?attr/textcolor"
        android:textAlignment="textEnd"/>
</LinearLayout>